# Rust-Wasm-Test

./: .gitignore  Cargo.toml  TODO.txt  index.html  index.js  package.json  temp.cpp  webpack.config.js
math/: Cargo.toml
math/src/: lib.rs
src/: app.rs  gl_setup.rs  lib.rs  macros.rs  materials.rs  mesh.rs  model.rs  programs.rs  renderer.rs  shaders.rs  textures.rs  utils.rs
src/camera/: mod.rs
src/math/: mod.rs
src/math/quaternions/: Cargo.toml
src/math/quaternions/src/: lib.rs
src/math/quaternions/tests/: lib.rs
src/math/vectors/: Cargo.toml
src/math/vectors/src/: lib.rs  vector3.rs
src/math/vectors/tests/: lib.rs
src/mesh/: mod.rs
src/program/: default.rs  grid.rs  mod.rs
src/shaders/: mod.rs
src/shaders/fragment/: default.rs  grid.rs
src/shaders/vertex/: default.rs  grid.rs  mod.rs
