[package]
name = 'multi_variable_calculus_viewer'
version = '0.1.0'
authors = ['Ted Klein Bergman <tedber@kth.se>']
edition = '2018'

[lib]
crate-type = ['cdylib']

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "0.3.44"
lazy_static = "1.4.0"
nalgebra = "0.21.1"
wasm-bindgen = "0.2.67"

[dependencies.web-sys]
version = "0.3.44"
features = [
    'Document',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'MouseEvent',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlUniformLocation',
    'Window',
]