[package]
name = 'multi_variable_calculus_viewer'
version = '0.1.0'
authors = ['Ted Klein Bergman <tedber@kth.se>']
edition = '2018'

[lib]
crate-type = ['cdylib']

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "0.3.44"
lazy_static = "1.4.0"
nalgebra = "0.21.1"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = {version = "0.2.67", features = ['serde-serialize'] }
metric = "0.1.2"

[dependencies.web-sys]
version = "0.3.44"
features = [
    'CssStyleDeclaration',
    'Document',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'HtmlElement',
    'MouseEvent',
    'WebGl2RenderingContext',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGl2RenderingContext',
    'WebGlVertexArrayObject',
    'WebGlShader',
    'WebGlUniformLocation',
    'Window',
]